5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1793_3136.log
== SUBMITION (2019-05-30 19:13:37) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while (1< size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.156432
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while (1< size(v):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:54) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while (1< size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
       divisao= soma/n
       m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.182311
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while (1< size(v):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:15:29) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while (1< size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    while (1< size(v):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:15:33) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while (1< size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.161338
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while (1< size(v):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:15:56) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while (1<size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.220713
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while (1<size(v):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:08) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.182106
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:10) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.15724
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:11) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.202432
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:11) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.190016
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:16:34) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(i<size(v):
		 soma= soma + log[i+1]
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.168505
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(i<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:17:37) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log(v[i]+1
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.190032
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:17:40) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log(v[i]+1
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:08) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log(v[i]+1)
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.164946
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:11) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log(v[i]+1)
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.171815
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:18:56) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log(v[i]+1)
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.202696
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:19:00) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log(v[i]+1)
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.19015
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:19:02) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
		 soma= soma + log(v[i]+1)
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- ERROR:
File "XXXX", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:19:25) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v)):
		 soma= soma + log(v[i]+1)
		 i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.443704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3136/main.py", line 7, in <module>
    soma= soma + log(v[i]+1)
IndexError: index 7 is out of bounds for axis 0 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:19:58) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
	soma= soma + log(v[i]+1)
	i=i+1
n= size(v)
divisao= soma/n
m= exp(divisao)-1
print(round(m, 2))

-- EXECUTION TIME:
0.160644
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:20:39) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor com n numeros reais positivos: ")))
soma=0
i=0
while(1<size(v):
	soma= soma + log(v[i]+1)
	i=i+1
n= size(v)
divisao= soma/n
M= exp(divisao)-1
print(round(M, 2))

-- EXECUTION TIME:
0.202448
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:25:41) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor: ")))
soma=0
i=0
while(1<size(v):
	soma= soma + log(v[i] + 1)
	i=i+1
n= size(v)
divisao= soma/n
M= exp(divisao)-1
print(round(M, 2))

-- EXECUTION TIME:
0.137993
-- ERROR:
  File "/home/codebench/codes/1793/3136/main.py", line 6
    while(1<size(v):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:27:23) 
-- CODE:
from numpy import*
from math import*
v=array(eval(input("vetor: ")))
soma=0
i=0
while(i<size(v)):
	soma= soma + log(v[i] + 1)
	i=i+1
n= size(v)
divisao= soma/n
M= exp(divisao)-1
print(round(M, 2))

-- EXECUTION TIME:
0.405812
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.53
---- user output:
4.53
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.44
---- user output:
3.44
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.84
---- user output:
2.84
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
